--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
 
-    <h1 id="level-title">Press Any Key to Start</h1>
+    <h1 id="level-title">Press Play to start the game</h1>
 
     <div class="container">
         <div id="green" class="btn green"></div>
@@ -18,6 +18,7 @@
         <div id="yellow" class="btn yellow"></div>
         <div id="blue" class="btn blue"></div>
     </div>
+    <button id="start-btn">Play</button>
 
     <script src="script.js"></script>
 </body>
